--- a/src/App.css
+++ b/src/App.css
@@ -392,7 +392,7 @@ li {
 
 .footer {
   font-size: 1.5em;
-  color: #D2527F;
+  color: #ffa617;
   width: 100%;
   margin: 0 auto;
   padding: 10px 0;
