--- a/src/App.css
+++ b/src/App.css
@@ -124,7 +124,6 @@ body {
   flex-direction: column;
 }
 
-
 /* Row */
 
 div.row {
@@ -136,7 +135,6 @@ div.row {
   min-width: 150px;
 }
 
-
 /** Form Elements **/
 
 label {
@@ -144,9 +142,7 @@ label {
   font-size: 1.2em;
 }
 
-input,
-select,
-textarea {
+input, select, textarea {
   border-radius: 3px;
   border: 1px solid #aebdc1;
   box-sizing: border-box;
@@ -288,21 +284,15 @@ textarea {
   padding: 15px;
 }
 
-.high .todo-title,
-.high .todo-priority,
-.high [class*='icon'] {
+.high .todo-title, .high .todo-priority, .high [class*='icon'] {
   background-color: #cd4436;
 }
 
-.medium .todo-title,
-.medium .todo-priority,
-.medium [class*='icon'] {
+.medium .todo-title, .medium .todo-priority, .medium [class*='icon'] {
   background-color: #f19f0f;
 }
 
-.low .todo-title,
-.low .todo-priority,
-.low [class*='icon'] {
+.low .todo-title, .low .todo-priority, .low [class*='icon'] {
   background-color: #2ac56c;
 }
 
@@ -380,13 +370,11 @@ textarea {
   text-decoration: line-through;
 }
 
-
 /** TODO List **/
 
 li {
   list-style-type: none;
 }
-
 
 /** Footer **/
 
@@ -413,9 +401,7 @@ span.action {
   margin: 0 15px 0 0;
 }
 
-
 /** font icons **/
-
 
 /* Rules for sizing the icon. */
 
@@ -435,15 +421,13 @@ span.action {
   font-size: 48px;
 }
 
-
 /* Rules for using icons as black on a light background.*/
 
 .material-icons.md-dark {
   color: rgba(0, 0, 0, 0.54);
 }
 
-.todo-item.done .material-icons.md-dark,
-.material-icons.md-dark:hover {
+.todo-item.done .material-icons.md-dark, .material-icons.md-dark:hover {
   color: rgba(255, 255, 255, 1);
 }
 
@@ -478,4 +462,190 @@ span.action {
     -webkit-transform: rotate(360deg);
     transform: rotate(360deg);
   }
+}
+
+/* login page */
+
+.login {
+  margin: 0 0 8px 0;
+  color: #6a6f8c;
+  font: 600 16px/18px 'Open Sans', sans-serif;
+}
+
+.login input {
+  outline: none;
+}
+
+*, :after, :before {
+  box-sizing: border-box
+}
+
+.clearfix:after, .clearfix:before {
+  content: '';
+  display: table
+}
+
+.clearfix:after {
+  clear: both;
+  display: block
+}
+
+a {
+  color: inherit;
+  text-decoration: none
+}
+
+.login-wrap {
+  width: 100%;
+  margin: auto;
+  max-width: 525px;
+  min-height: 670px;
+  position: relative;
+  background: url(https://raw.githubusercontent.com/khadkamhn/day-01-login-form/master/img/bg.jpg) no-repeat center;
+  box-shadow: 0 12px 15px 0 rgba(0, 0, 0, .24), 0 17px 50px 0 rgba(0, 0, 0, .19);
+}
+
+.login-html {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  padding: 90px 70px 50px 70px;
+  background: rgba(40, 57, 101, .9);
+}
+
+.login-html .sign-in-htm, .login-html .sign-up-htm {
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: absolute;
+  transform: rotateY(180deg);
+  backface-visibility: hidden;
+  transition: all .4s linear;
+}
+
+.login-html .sign-in, .login-html .sign-up, .login-form .group .check {
+  display: none;
+}
+
+.login-html .tab, .login-form .group .label, .login-form .group .button {
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+.login-html .tab {
+  font-size: 22px;
+  margin-right: 15px;
+  padding-bottom: 5px;
+  margin: 0 15px 10px 0;
+  display: inline-block;
+  border-bottom: 2px solid transparent;
+}
+
+.login-html .sign-in:checked+.tab, .login-html .sign-up:checked+.tab {
+  color: #fff;
+  border-color: #1161ee;
+}
+
+.login-form {
+  min-height: 345px;
+  position: relative;
+  perspective: 1000px;
+  transform-style: preserve-3d;
+}
+
+.login-form .group {
+  margin-bottom: 15px;
+}
+
+.login-form .group .label, .login-form .group .input, .login-form .group .button {
+  width: 100%;
+  color: #fff;
+  display: block;
+}
+
+.login-form .group .input, .login-form .group .button {
+  border: none;
+  padding: 15px 20px;
+  border-radius: 25px;
+  background: rgba(255, 255, 255, .1);
+}
+
+.login-form .group input[data-type="password"] {
+  text-security: circle;
+  -webkit-text-security: circle;
+}
+
+.login-form .group .label {
+  color: #aaa;
+  font-size: 12px;
+}
+
+.login-form .group .button {
+  background: #1161ee;
+}
+
+.login-form .group label .icon {
+  width: 15px;
+  height: 15px;
+  border-radius: 2px;
+  position: relative;
+  display: inline-block;
+  background: rgba(255, 255, 255, .1);
+}
+
+.login-form .group label .icon:before, .login-form .group label .icon:after {
+  content: '';
+  width: 10px;
+  height: 2px;
+  background: #fff;
+  position: absolute;
+  transition: all .2s ease-in-out 0s;
+}
+
+.login-form .group label .icon:before {
+  left: 3px;
+  width: 5px;
+  bottom: 6px;
+  transform: scale(0) rotate(0);
+}
+
+.login-form .group label .icon:after {
+  top: 6px;
+  right: 0;
+  transform: scale(0) rotate(0);
+}
+
+.login-form .group .check:checked+label {
+  color: #fff;
+}
+
+.login-form .group .check:checked+label .icon {
+  background: #1161ee;
+}
+
+.login-form .group .check:checked+label .icon:before {
+  transform: scale(1) rotate(45deg);
+}
+
+.login-form .group .check:checked+label .icon:after {
+  transform: scale(1) rotate(-45deg);
+}
+
+.login-html .sign-in:checked+.tab+.sign-up+.tab+.login-form .sign-in-htm {
+  transform: rotate(0);
+}
+
+.login-html .sign-up:checked+.tab+.login-form .sign-up-htm {
+  transform: rotate(0);
+}
+
+.hr {
+  height: 2px;
+  margin: 60px 0 50px 0;
+  background: rgba(255, 255, 255, .2);
+}
+
+.foot-lnk {
+  text-align: center;
 }
