--- a/src/App.css
+++ b/src/App.css
@@ -649,3 +649,13 @@ a {
 .foot-lnk {
   text-align: center;
 }
+
+.time {
+  float: left;
+  background: #384e7f;
+  color: white;
+  padding: 4px 8px;
+  position: relative;
+  left: -17px;
+  bottom: 2px;
+}
